# elara-gfx

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  Cargo.toml  README.md
.githooks/: pre-commit
examples/: black_hole.rs  demo.rs  fragshader.rs  headless.rs  image.rs  line_rendering.rs  polygon.rs  rect_rendering.rs  stacked_rects.rs  tex_and_shape.rs  text_rendering.rs  triangle.rs  ui_rendering.rs
examples/shaders/: blackhole.frag  blackhole.vert  circle.frag  color.frag  gradient.frag  grid.frag  image.frag  image.vert  orbits.frag  polygon.frag  polygon.vert  quad.vert  stacked_rects.frag  tex_and_shape.frag  tex_and_shape.vert  triangle.frag  triangle.vert
examples/tools/: font-white.json  font.json  read_json.py
samples/: LICENSING.md
shaders/: triangle.frag
src/: canvas.rs  error.rs  gfx.rs  image.rs  lib.rs  types.rs
tools/: windowinfo
