[package]
name = "elara-gfx"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "A GPU programming and graphics library for Rust, developed for Project Elara"
repository = "https://github.com/elaraproject/elara-gfx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-gl-context = "0.1.2"
gl = "0.14.0"
winit = { version = "0.27.3", default-features = false, features = ["x11"] }
elara_log = { path = "src/elara-log" }
png = "0.17.9"
freetype-rs = "0.32.0"
jpeg-decoder = { version = "0.3.0", default_features = false }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
